fix main content body css alignment, removedebug table for now

--- a/less/site.less
+++ b/less/site.less
@@ -185,6 +185,12 @@ nav {
   height: 1em;
   fill: currentColor;
 }
+
+.contentbody {
+    margin: @spacer;
+    h2 {margin-bottom:(@spacer/2 + 0.1em);}
+}
+
 //general styles from here on.
 .search {
   display: flex;
@@ -278,7 +284,6 @@ nav {
   }
 }
 .ortholog-results {
-  margin: @spacer;
   width: 100%;
   .count {
     width: 6em;
